--- a/subject.html
+++ b/subject.html
@@ -17,6 +17,29 @@
       <li> Cards </li>
     </ul> 
   </h2>
+  <h2>
+    Investments
+  </h2>
+  <p>
+  </p>
+  <p>
+    Common stocks- stocks that give parts of ownership to a corporation. If the corporation does well, the common stock will go up in value while if it does not, the value will go down. There are voting and nonvoting common stocks. 
+  </p>
+  <p>
+    Mutual funds - mutual funds are shared within a group by combining their money to invest in a stock or a group of stocks. Its profits and losses are managed by a fund manager. There are open end and close-ended funds. Open-ended funds do not have a set amount of shares and are the most common. They are created and destroyed as necessary. Close-ended funds have a set amount of shares and depend on supply and demand.
+  </p>
+  <p>
+    Life insurance - life insurance is the amount of money that the family or loved ones receive after one’s death. It replaces the income flow for anyone dependent on said person. It also includes any funds that are needed such as burial, property costs, debt, medical expenses, inheritances, etc. The two most popular types of life insurance are term and whole life. A term life insurance is only given if the death occurs within the term, usually from one to 30 years while a whole life is paid for the whole lifespan of said person.
+  </p>
+  <p>
+    A certificate of deposit (CD) - Certificates of deposit are considered one of the safest investments from bank accounts and give a higher interest rate than savings accounts. However, the money has to be locked for a certain amount of time or there will be a penalty. This higher rate is due to the fact that since your money is locked up longer, the bank can utilize your money for long term investments such as loans. 
+  </p>
+  <p>
+    A savings account - a savings account is a bank account that allows you to store money with earning insurance. The amount of interest is seen as a thank you fee from the bank for allowing them to loan out your money for an amount of time.
+  </p>
+  <p>
+    A U.S. savings bond- U.S savings bonds are bonds that can be purchased with a generally high interest. Like taxes, this money is used to purchase US government expenses such as projects and operations. There are two types of these bonds, Series EE and Series I. Series EE bonds are sold at face value and when collected, will be worth that face value plus and interest earned onto it. On the other hand, while Series I bonds are also sold at face value, the amount you receive back will be based on both inflation and the amount of interest.
+  </p>
 </body>
   
 </html>
