--- a/subject.html
+++ b/subject.html
@@ -40,6 +40,33 @@
   <p>
     A U.S. savings bond- U.S savings bonds are bonds that can be purchased with a generally high interest. Like taxes, this money is used to purchase US government expenses such as projects and operations. There are two types of these bonds, Series EE and Series I. Series EE bonds are sold at face value and when collected, will be worth that face value plus and interest earned onto it. On the other hand, while Series I bonds are also sold at face value, the amount you receive back will be based on both inflation and the amount of interest.
   </p>
+  <h2>
+    Insurances
+  </h2>
+  <p>
+    Automobile - Automobile insurance is purchased by a car owner and the insurance company. This contract will cover property, medical, and liability issues. Property will cover car damages or car theft, medical covers any injuries and funeral expenses, and liability covers any legal responsibilities to others. Many states require auto owners to have automobile insurance to be able to legally drive.
+  </p>
+  <p>
+    Health - Health insurance covers medical expenses. It covers many but not all injuries, and doctors visits. Health insurance consists of your premium, deductibles, copayment, coinsurance, and your out-of-pocket limit. Premium is the monthly bill you pay to the insurance company, but not all medical expenses. Deductibles are the amount of money you pay yourself before the health insurance, copayment is the fixed amount you have to pay for a prescription, coinsurance is a percentage that your insurance agrees to pay, and out-of-pocket limit is the maximum amount of money you pay a year towards insurance covered health care. Different people with different backgrounds are geared toward different types, (ex: employer provided or senior citizen)
+  </p>
+  <p>
+    Homeowner’s/renter’s - Homeowners insurance is paid for the building in which you own while renter’s is for landlords who expect you to pay a percentage to cover your property in the building you live in. It is usually paid monthly or annually.
+  </p>
+  <p>
+    Whole life and term life- life insurance. A term life insurance is only given if the death occurs within the term, usually from one to 30 years while a whole life is paid for the whole lifespan of said person. Whole life also accumulates cash value over time.
+  </p>
+  <h2>
+    Cards
+  </h2>
+  <p>
+    Credit Card- A credit card allows you to purchase things without having the money at hand, meaning the money spent will be in debt to the credit card company. It allows for you to spend as much money as you want, as long as it does not exceed your charge limit. Your charge limit is the amount of money your bank allows you to spend, this amount depending on your credit card history. When the amount needs to be paid back you will receive a minimum amount that needs to be paid each month, though it is a good idea to pay as much back as one, as the more interest will build up as time goes by. 
+  </p>
+  <p>
+    Debit Card- A debit card is a card that like a credit card allows you to purchase things, but instead of loaning form the bank, is taken directly out of your checking account, therefore, you can not buy anything with money you don’t have at hand, as the amount in your checking account is the amount that is allowed to be used. An advantage of this is knowing the amount of money there is on their card, makes people less likely to make impulse spendings.
+  </p>
+  <p>
+    Charge Cards- A charge card is similar to a credit card, as the money you use is being loaned from the bank and you can spend money you don’t have at hand, but all the money has to be paid by the end of the month. This is beneficial as the amount of interest on spending will not build up, and you will have to pay back less. However, this is also bad as you will need to pay all of it back by the end.
+  </p>
 </body>
   
 </html>
