--- a/subject.html
+++ b/subject.html
@@ -23,7 +23,8 @@
   <p>
   </p>
   <p>
-    Common stocks- stocks that give parts of ownership to a corporation. If the corporation does well, the common stock will go up in value while if it does not, the value will go down. There are voting and nonvoting common stocks. 
+    <a href= "https://www.thebalance.com/common-stocks-3305892"> Common stocks </a>
+      - stocks that give parts of ownership to a corporation. If the corporation does well, the common stock will go up in value while if it does not, the value will go down. There are voting and nonvoting common stocks. 
   </p>
   <p>
     Mutual funds - mutual funds are shared within a group by combining their money to invest in a stock or a group of stocks. Its profits and losses are managed by a fund manager. There are open end and close-ended funds. Open-ended funds do not have a set amount of shares and are the most common. They are created and destroyed as necessary. Close-ended funds have a set amount of shares and depend on supply and demand.
