--- a/subject.html
+++ b/subject.html
@@ -48,7 +48,7 @@
     Insurances
   </h2>
   <p>
-    <a href="https://www.iii.org/publications/insurance-handbook/insurance-basics/auto-insurance-basics"> Automobile </a.
+    <a href="https://www.iii.org/publications/insurance-handbook/insurance-basics/auto-insurance-basics"> Automobile </a>
       - Automobile insurance is purchased by a car owner and the insurance company. This contract will cover property, medical, and liability issues. Property will cover car damages or car theft, medical covers any injuries and funeral expenses, and liability covers any legal responsibilities to others. Many states require auto owners to have automobile insurance to be able to legally drive.
   </p>
   <p>
