--- a/subject.html
+++ b/subject.html
@@ -4,7 +4,7 @@
   
 <head>
   <title> Personal Management </title>
-    <link rel="stylesheet" href="new.css">
+    <link rel="stylesheet" href="style.css">
 </head>
   
 <body>
