--- a/topic2.html
+++ b/topic2.html
@@ -31,5 +31,10 @@
       <br/>
 	  life insurance. A term life insurance is only given if the death occurs within the term, usually from one to 30 years while a whole life is paid for the whole lifespan of said person. Whole life also accumulates cash value over time.
   </p>
+<footer>
+  <p>
+      <a href="site.html"> Return to Main Page </a>
+  </p>
+</footer>
  </body>
  </html>
