--- a/topic1.html
+++ b/topic1.html
@@ -37,6 +37,10 @@
       <br/>
 	  U.S savings bonds are bonds that can be purchased with a generally high interest. Like taxes, this money is used to purchase US government expenses such as projects and operations. There are two types of these bonds, Series EE and Series I. Series EE bonds are sold at face value and when collected, will be worth that face value plus and interest earned onto it. On the other hand, while Series I bonds are also sold at face value, the amount you receive back will be based on both inflation and the amount of interest.
   </p>
-  
+  <footer>
+  <p>
+	<a href="site.html"> Return to Main Page </a>
+  </p>
+</footer>
  </body>
  </html>
