--- a/topic1.html
+++ b/topic1.html
@@ -8,10 +8,19 @@
 </head>
 
 <body>
-
-<h2>
+<img src="pm_logo1.png" width="20%;" 
+class="center"></img>
+<h1>
     Investments
-</h2>
+</h1>
+<nav class="crumb">
+    <ul>
+	    <li><a href="site.html">Main</a></li>
+        <li><a class="active" href="subject1.html">Investments</a></li>
+        <li><a href="subject2.html">Insurances</a></li>
+        <li><a href="subject3.html">Cards</a></li>
+    </ul>
+</nav>
   <p>
     <a href= "https://www.thebalance.com/common-stocks-3305892"> Common stocks </a>
       <br/>
@@ -39,8 +48,8 @@
   </p>
   <footer>
   <p>
-	<a href="site.html"> Return to Main Page </a>
+  <a href="site.html"> Return to Main Page </a>
   </p>
-</footer>
+  </footer>
  </body>
  </html>
