--- a/topic2.html
+++ b/topic2.html
@@ -8,9 +8,19 @@
 </head>
 
 <body>
-<h2>
+<img src="pm_logo1.png" width="20%;" 
+	class="center"></img>
+<h1>
     Insurances
-  </h2>
+</h1>
+  <nav class="crumb">
+    <ul>
+	    <li ><a href="site.html">Main</a></li>
+        <li><a href="topic1.html">Investments</a></li>
+        <li><a class="active" href="topic2.html">Insurances</a></li>
+        <li><a href="topic3.html">Cards</a></li>
+    </ul>
+</nav>
   <p>
     <a href="https://www.iii.org/publications/insurance-handbook/insurance-basics/auto-insurance-basics"> Automobile </a>
  	  <br/>     
@@ -31,10 +41,10 @@
       <br/>
 	  life insurance. A term life insurance is only given if the death occurs within the term, usually from one to 30 years while a whole life is paid for the whole lifespan of said person. Whole life also accumulates cash value over time.
   </p>
-<footer>
+  <footer>
   <p>
-      <a href="site.html"> Return to Main Page </a>
+  <a href="site.html"> Return to Main Page </a>
   </p>
-</footer>
+  </footer>
  </body>
  </html>
