--- a/topic3.html
+++ b/topic3.html
@@ -8,9 +8,20 @@
 </head>
 
 <body>
-<h2>
+<img src="pm_logo1.png" width="20%;" 
+class="center"></img>
+<h1>
     Cards
-  </h2>
+</h1>
+  <nav class="crumb">
+    <ul>
+	    <li><a href="site.html">Main</a></li>
+        <li><a href="topic1.html">Investments</a></li>
+        <li><a href="topic2.html">Insurances</a></li>
+        <li><a class="active" href="topic3.html">Cards</a></li>
+    </ul>
+</nav>
+
   <p>
     <a href="https://www.thesimpledollar.com/credit-cards/personal-finance-101-charge-cards-versus-debit-cards-versus-credit-cards-pros-and-cons/"> Credit Card </a>
       <br/>
@@ -26,9 +37,10 @@
       <br/>
 	  A charge card is similar to a credit card, as the money you use is being loaned from the bank and you can spend money you don’t have at hand, but all the money has to be paid by the end of the month. This is beneficial as the amount of interest on spending will not build up, and you will have to pay back less. However, this is also bad as you will need to pay all of it back by the end.
   </p>
+  
 <footer>
   <p>
-	  <a href="site.html"> Return to Main Page </a>
+	<a href="site.html"> Return to Main Page </a>
   </p>
 </footer>
 </body>
