--- a/final.html
+++ b/final.html
@@ -33,7 +33,7 @@ My project is a text based escape room in the point of view of the person playin
 <li><a href="code.jpg">Code.jpg: </a>The corresponding puzzle for the painting</li>
 <li><a href="door.jpg">Door.jpg</a>: Visual representation of the exit door to freedom.</li>
 <li><a href="final.py">Final.py</a>: Python file in which the program will run.</li>
-<li><a href="final.html">Final.html</a>: main webpage to describe how to play, a closer look at the puzzles, and the python file.</li>
+<li><a href="site.html">Site.html</a>: main webpage to describe how to play, a closer look at the puzzles, and the python file.</li>
 <li><a href="graphics.html">(Graphics</a>, <a href="Howtoplay.html">Howtoplay</a>, and <a href="play.html">Play).html</a>: are the subcategories within the main htm web page.</li>
 <li><a href="graphics.png">(Graphics</a>, <a href="Howtoplay.png">Howtoplay</a>, and <a href="play.png">Play).png</a>: are 3 uniform images to help navigate the web page.</li>
 <li><a href="lock.png">Lock.png</a>: demonstrates how the lock on the exit door works.</li>
@@ -45,8 +45,7 @@ My project is a text based escape room in the point of view of the person playin
 </ul>
 
 <h2>Resources used</h2>
-<p>Python Library PIL. This allowed me to eat, read and attach images to whenever is needed in the program.
-final/py: allowed me to link the final product into an html file.</p>
+<p>Python Library PIL. This allowed me to open,read, and attach images to whenever is needed in the program.</p>
 
 <h2>Bugs</h2>
 <p>Inputs must be an exact match or will also be exact copy.
