--- a/site.html
+++ b/site.html
@@ -3,59 +3,52 @@
 <html lang="en">
   
 <head>
-  <title> Personal Management </title>
-  <link rel="stylesheet" href="style.css">
+	<title> Escape Rewind </title>
+	<link rel="stylesheet" href="style.css">
 </head>
-  
- <body>
- 
-<img src="pm_logo1.png" width="20%;" 
+
+<body>
+<img src="Rewind.png" width="150%;" 
 class="center"></img>
 
-  <h1>
-    Personal Management
-  </h1>
-  
-<h5>
-<table style="width:100%">
-
+<h1> Escape Rewind </h1>
 <nav class="crumb">
     <ul>
 	    <li><a class="active" 
-		href="site.html">Main</a></li>
-        <li><a href="topic1.html">Investments</a></li>
-        <li><a href="topic2.html">Insurances</a></li>
-        <li><a href="topic3.html">Cards</a></li>
+		href="site.html">Home</a></li>
+        <li><a href="Howtoplay.html">How to Play</a></li>
+        <li><a href="graphics.html">Graphics</a></li>
+        <li><a href="Play.html">Play!</a></li>
     </ul>
 </nav>
 <br/>
-<tr height="50%">
-  <th>
-  <a href="topic1.html"> Investments </a>
-  <h5>want to know how to invest and save money for the future?</h5>
-  </th>
-  <th width="30%">
-  <img src="insurance2.jpg" width="100%">
-  </th>
-  <th>
-  <a href="topic3.html"> Bank Cards </a>
-  <h5>Which is the best for your spending habits?</h5>
-  </th>
- </tr>
- <tr>
-  <td width="30%">
-  <img src="stocks2.jpg" width="100%" >
-  </td>
-  <td>
-  <a href="topic2.html"> Insurances </a>
-  <h5>
-  what types of insurances are there and what are needed?
-  </h5>
-  </td>
-  <td width="30%">
-  <img src="cards.jpg" width="100%" >
-  </td>
-</tr>
+<br>
+<div class="row">
+  <div class="column">
+  <a href="howtoplay.html">
+    <img src="howtoplay.png" alt="bookshelf" style="width:100%">
+	</a>
+	<p>
+	Background Info. Learn how to play! Click on the Image to learn more
+	</p>
+  </div>
+  <div class="column">
+	<p>
+	Images won't Load? Want to resolve the puzzles? Click on the Image!
+	</p>
+	<a href="graphics.html">
+    <img src="graphics.png" alt="safe" style="width:100%">
+	</a>
+  </div>
+  <div class="column">
+  <a href="play.html">
+    <img src="play.png" alt="painting" style="width:100%">
+	</a>
+	<p>
+	Ready to Play? Click here!
+	</p>
+  </div>
+</div>
 </h3>
 
   </body>
