--- a/graphics.html
+++ b/graphics.html
@@ -54,7 +54,7 @@
  </h2>
  <div class="row">
   <div class="column">
-    <img src="cipher.png" alt="bookshelf" style="width:100%">
+    <img src="Cipher.png" alt="bookshelf" style="width:100%">
   </div>
   <div class="column">
     <img src="code.jpg" alt="bookshelf" style="width:150%">
@@ -68,7 +68,7 @@
  </h2>
   <div class="row">
   <div class="column">
-    <img src="door.png" alt="exit" style="width:100%">
+    <img src="Door.png" alt="exit" style="width:100%">
   </div>
   <div class="column">
     <img src="lock.png" alt="lock" style="width:150%">
