--- a/graphics.html
+++ b/graphics.html
@@ -68,7 +68,7 @@
  </h2>
   <div class="row">
   <div class="column">
-    <img src="Door.png" alt="exit" style="width:100%">
+    <img src="door.jpg" alt="exit" style="width:100%">
   </div>
   <div class="column">
     <img src="lock.png" alt="lock" style="width:150%">
