--- a/final.html
+++ b/final.html
@@ -10,7 +10,7 @@ Yingyuan Yuan
 Class Period: 5
 Project Name: Escape Rewind</h1>
 
-<h2>Website Link</h2>
+<h2><a href=https://yingyuany.github.io/web/graphics.html>Website Link</a></h2>
 <h2>Project Description</h2>
 <p>
 My project is a text based escape room in the point of view of the person playing it. By solving all 4 of the puzzles, you will be able to escape the basement of a famous serial killer.
