--- a/final.html
+++ b/final.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Escape Rewind</title>
 </head>
-<body>
+<body style="background-color:#E9FCD7;">
   <h1>TPNG: Escape
 Yingyuan Yuan
 Class Period: 5
