--- a/final.html
+++ b/final.html
@@ -5,9 +5,9 @@
 	<title>Escape Rewind</title>
 </head>
 <body style="background-color:#E9FCD7;">
-  <h1>TPNG: Escape
-Yingyuan Yuan
-Class Period: 5
+  <h1>
+Yingyuan Yuan<br>
+Class Period: 5<br>
 Project Name: Escape Rewind</h1>
 
 <h2><a href=https://yingyuany.github.io/web/graphics.html>Website Link</a></h2>
